feat(app): demander et gérer le rôle Diffuseur via de nouvelles API et interfaces
Refs: STR-49
